2002-10-10  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Set revision number of all files to 3.0.
	
2002-10-09  Till Kamppeter <till.kamppeter@gmx.net>

	* README, USAGE: Updated documentation according to the splitted
	  packages.
	
2002-10-08  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Splitted Foomatic into four packages:
	
	  - foomatic-filters: Filter scripts used by the spoolers to
	    convert the incoming PostScript data into the printer's
	    native format using a printer/driver specific PPD file
	  - foomatic-db-engine: Foomatic's database engine generates
	    PPD files from the data in Foomatic's XML database. It also
	    contains scripts to directly generate print queues and handle
	    jobs.
	  - foomatic-db: The collected knowledge about printers, drivers,
	    and driver options in XML files, used by foomatic-db-engine
	    to generate PPD files.
	  - foomatic-db-hpijs: Foomatic XML data generator for HP's HPIJS
	    driver.
	
	  This package is foomatic-db.

	* configure.in, Makefile.in: Removed all portions not needed for
	  foomatic-db.

	* configure.in: Fixed check to set /etc instead of /usr/local/etc
	  as $sysconfdir.
	
	* db/source/printer/Epson-Stylus_C82.xml: Fixed URL.

	* db/source/printer/Epson-Stylus_C8?.xml: Text fixes.

2002-10-07  Till Kamppeter <till.kamppeter@gmx.net>

	* data-generators/hpijs/hpijs-printermap,
	  db/source/printer/HP-Business_Inkjet_3000.xml: The HP Business
	  Inkjet 3000 does not work with the HPIJS driver.

	* db/source/printer/122496.xml,
	  db/source/printer/HP-DesignJet_750.xml: Removed hint that IJS
	  driver has problem with large paper sizes. This is fixed.
	
2002-10-06  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/opt/*: Added "largeformat-PageSize.xml" special page
	  size option for large format printers (drivers "dnj650c" and
	  "Postscript"). Now Foomatic supports paper sizes larger than A3
	  with these printers.
	
2002-10-05  Till Kamppeter <till.kamppeter@gmx.net>
