@@ -303,5 +303,18 @@
     </ev_shortname>
     <ev_driverval>1152 1728</ev_driverval>
    </enum_val>
+   <enum_val id="ev/126-Custom">
+    <ev_longname>
+     <en>Custom size</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>Custom</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>0 0</ev_driverval>
+   </enum_val>
   </enum_vals>
 </option>
