@@ -1,3 +1,8 @@
+2002-10-19  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* db/source/opt/126.xml: Custom paper size support for most dot
+	  matrix printers.
+
 2002-10-10  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* *: Set revision number of all files to 3.0.
